--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -23,7 +23,7 @@ jobs:
     - name: Steps before
       run: |
         sudo apt update
-        sudo apt install -y --no-install-recommends docker-buildx-plugin
+        sudo apt install -y --no-install-recommends docker-buildx
 
     - name: Build and push to dockerhub
       uses: docker/build-push-action@v5
